Fix overflow on safari

--- a/src/css/natural-carousel.scss
+++ b/src/css/natural-carousel.scss
@@ -20,7 +20,8 @@ $nextPrevWidth: 70px;
 }
 
 .natural-carousel {
-
+    
+    clip-path: content-box;
 
     *,
     *::after,
